# monoplane

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish.yaml
monoplane/: cli.py
